force-app/main/default/objects/SVMXC__Checklist__c/SVMXC__Checklist__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store the Submitted OR In-progress Checklist records for the Checklist type of SFM process.</description>
    <label>Checklist</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>