force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__ChecklistJSON__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__ChecklistJSON__c</fullName>
    <description>This field is used to hold the Question and Answers as JSON string  {attribute:value,}</description>
    <label>ChecklistJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>