force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__ChecklistMetaJSON__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__ChecklistMetaJSON__c</fullName>
    <description>This field is used to hold the JSON information related to Checklist Layout Structure</description>
    <label>ChecklistMetaJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>