force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__Completed_By__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields is used to hold the user name who completed the Checklist</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>