force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__Completed_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Completed_On__c</fullName>
    <description>This field is used to hold the date and time when the Checklist was completed</description>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>