force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>