force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__SM_Checklist_End_Longitude__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Checklist_End_Longitude__c</fullName>
    <description>Used to capture Longitude where the checklist was completed.</description>
    <inlineHelpText>Used to capture Longitude where the checklist was completed.</inlineHelpText>
    <label>Checklist End Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>