force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__SM_Checklist_Start_Latitude__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Checklist_Start_Latitude__c</fullName>
    <description>Used to capture Latitude where the checklist was started.</description>
    <inlineHelpText>Used to capture Latitude where the checklist was started.</inlineHelpText>
    <label>Checklist Start Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>