force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__SM_Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Parts_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Parts Order</description>
    <label>Parts Order</label>
    <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>