force-app/main/default/objects/SVMXC__Checklist__c/fields/SVMXC__SM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Sequence__c</fullName>
    <description>This field is used to store the sequence of the checklist row when the checklist record is split into multiple rows based on ChecklistMetaJSON size,</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>